# gemmini

./: .gitignore  CMakeLists.txt  Readme.md  meson.build  meson_options.txt
generators/: avx-ops.lisp  blas-gen.asd  blas-writer.lisp  build.sh  c-utils.lisp  compdag.lisp  cpu_info_tables.py  datatypes.lisp  gemm-class.lisp  gen-utils.lisp  genop-arch-maps.lisp  get_build_params.py  header-gen.lisp  macro-utils.lisp  matrix-class.lisp  microkernel-gen.lisp  representation.lisp
include/: RandomiseM.h  detgmm.h  dgemm.h  globaltypes.h  kernel.h  kernel12x4.h  kernel4x12.h  kernel4x4.h  kernel8x4.h  kernel8x8.h  mdiff.h  memparams.h  minmax.h  packing.h  sgemm.h  test_accuracy.h  test_performance.h  testgemm.h  testing.h
include/gentools/: RandomiseM.h  argcount.h  buffers.h  mdiff.h  nextbit.h  packing.h  parseTrans.h  print_matrix.h
include/kernels/: dgemm_kernel.h  kernel.h  kernel12x1.h  kernel12x2.h  kernel12x3.h  kernel12x4.h  kernel12x8.h  kernel16x4.h  kernel16x6.h  kernel4x12.h  kernel4x4.h  kernel8x4.h  kernel8x8.h
include/transpose/: nextbit.h  transpose.h  transpose16x16.h  transpose4x4.h  transpose8x8.h
src/: RandomiseM.c  detgmm.c  dgemm.c  dgemm_solo_test.c  driver.c  kernel.c  kernel12x4.c  kernel4x12.c  kernel4x4.c  kernel8x4.c  kernel8x8.c  mdiff.c  meson.build  packing.c  sgemm.c  sgemm_solo_test.c  solo_test.c  testGeMM.c  test_accuracy.c  test_dgemm.c  test_driver.c  test_performance.c  test_sgemm.c  testgemm.c
src/gentools/: RandomiseM.c  argcount.c  buffers_32.c  buffers_64.c  mdiff.c  mk_avx_buffer.c  mk_avx_buffer_C.c  mk_part_buffer.c  mk_part_buffer_C.c  nextbit.c  packing.c  packing_32.c  packing_64.c  parseTrans.c  print_matrix.c
src/kernels/: kernel12x1.c  kernel12x2.c  kernel12x3.c  kernel12x4.c  kernel12x8.c  kernel16x4.c  kernel4x12.c  kernel4x4.c  kernel8x4.c  kernel8x6.c  kernel8x8.c
src/strassen/dbl_kernels/: kernel_dbl8x4.c
src/transpose/: meson.build  transpose.c  transpose_test  transpose_test.c
tests/: format_asm.sh  getPath.py  meson.build  plotperformance.py  solo_bench.py
