option('blis_comp', type: 'boolean', value: false, description: 'Enable comparison against BLIS reference - used in development')
option('blis_path', type: 'string', value: '', description: 'Path to BLIS reference functions')

option('check_accuracy', type: 'boolean', value: true, description: 'Build accuracy tests')
option('run_accuracy_test', type: 'boolean', value: true, description: 'Test accuracy after build')
